# naval-ballistics

./: README.md  outline.md  progress.md  pyproject.toml
navalballistics/: __init__.py  atmosphere.py  cli.py  constants.py  frames.py  gravity.py  mpm.py  rotation.py  scenario.py
tests/: test_atmosphere.py  test_cli.py  test_frames.py  test_gravity.py  test_mpm.py  test_rotation.py  test_scenario.py
tests/data/: baseline.yaml  sweep.yaml
